--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,12 @@
 {
   "id": "EAGLETAGFINDERTUKI0918",
   "version": "0.1.0",
+  "platform": "all",
+  "arch": "all",
   "name": "Eagle Tag Finder",
   "logo": "logo.png",
   "keywords": ["tag", "thumbnail", "finder"],
+  "devTools": true,
   "main": {
     "url": "index.html",
     "width": 980,
